--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GPS Land Area Calculator</title>
+    <title>GPS  Area Calculator</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <style>
         body { font-family: sans-serif; margin: 20px; }
