--- a/hello.html
+++ b/hello.html
@@ -3,30 +3,54 @@
 <head>
     <title>GPS Area Calculator</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
-        body { font-family: sans-serif; margin: 20px; }
-        #map { height: 600px; width: 100%; margin-top: 10px; }
-        .controls { margin-bottom: 10px; }
-        .controls button { padding: 10px 15px; font-size: 16px; cursor: pointer; }
-        #result { margin-top: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
+        body { font-family: Arial, sans-serif; margin: 20px; background-color: #f9fafb; }
+        #map { height: 600px; width: 100%; margin-top: 10px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        .controls { margin-bottom: 20px; display: flex; gap: 10px; }
+        #result { margin-top: 20px; padding: 15px; border: 1px solid #e5e7eb; border-radius: 8px; background-color: #ffffff; }
+        .spinner { display: none; border: 4px solid #f3f3f3; border-top: 4px solid #3b82f6; border-radius: 50%; width: 24px; height: 24px; animation: spin 1s linear infinite; margin: 10px auto; }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        @media (max-width: 640px) { #map { height: 400px; } .controls { flex-direction: column; } }
     </style>
 </head>
 <body>
-    <h1>GPS  Area Calculator</h1>
-    <p>Press "Start Measurement," walk the perimeter of the land, then press "Stop & Calculate."</p>
+    <h1 class="text-2xl font-bold text-gray-800">GPS Land Area Calculator</h1>
+    <p class="text-gray-600 mb-4">Press "Start Measurement," walk the perimeter of the land in an open area with clear sky, then press "Stop & Calculate."</p>
     <div class="controls">
-        <button id="startButton">Start Measurement</button>
-        <button id="stopButton" disabled>Stop & Calculate</button>
+        <button id="startButton" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition">Start Measurement</button>
+        <button id="stopButton" class="bg-gray-500 text-white px-4 py-2 rounded-md hover:bg-gray-600 transition" disabled>Stop & Calculate</button>
     </div>
     <div id="map"></div>
-    <div id="result"></div>
+    <div id="spinner" class="spinner"></div>
+    <div id="result" class="text-gray-800"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
     <script>
-        // Initialize the map without setting a view initially
-        const map = L.map('map');
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        // Custom marker icons
+        const startIcon = L.icon({
+            iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+            iconSize: [25, 41],
+            iconAnchor: [12, 41],
+            popupAnchor: [1, -34],
+            shadowUrl: 'https://unpkg.com/leaflet@1.7.1/dist/images/marker-shadow.png',
+            shadowSize: [41, 41]
+        });
+        const pointIcon = L.icon({
+            iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-blue.png',
+            iconSize: [15, 24],
+            iconAnchor: [7, 24],
+            popupAnchor: [1, -20],
+            shadowUrl: 'https://unpkg.com/leaflet@1.7.1/dist/images/marker-shadow.png',
+            shadowSize: [24, 24]
+        });
+
+        // Initialize the map with a fallback view
+        const map = L.map('map').setView([0, 0], 2);
+        L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> & <a href="https://carto.com/attributions">CARTO</a>',
+            subdomains: 'abcd',
+            maxZoom: 20
         }).addTo(map);
 
         let watchId = null;
@@ -36,6 +60,7 @@
         const startButton = document.getElementById('startButton');
         const stopButton = document.getElementById('stopButton');
         const resultDiv = document.getElementById('result');
+        const spinner = document.getElementById('spinner');
 
         // Function to start the location tracking
         function startTracking() {
@@ -46,6 +71,7 @@
             startButton.disabled = true;
             stopButton.disabled = false;
             resultDiv.innerHTML = 'Getting your location...';
+            spinner.style.display = 'block';
             coordinates = [];
 
             // Clear previous markers and lines
@@ -53,53 +79,71 @@
             markers.forEach(marker => map.removeLayer(marker));
             markers = [];
 
-            // Get the initial location and set the map's view
+            // Get the initial location
             navigator.geolocation.getCurrentPosition(
                 (initialPosition) => {
                     const initialLat = initialPosition.coords.latitude;
                     const initialLon = initialPosition.coords.longitude;
-                    console.log('Initial position:', initialLat, initialLon);
+                    console.log('Initial position:', initialLat, initialLon, 'Accuracy:', initialPosition.coords.accuracy);
 
                     // Set the map view to the initial location
                     map.setView([initialLat, initialLon], 19);
-                    map.invalidateSize(); // Ensure map renders correctly
-                    resultDiv.innerHTML = 'Tracking started... Walk the perimeter now.';
+                    map.invalidateSize();
+                    spinner.style.display = 'none';
+                    resultDiv.innerHTML = 'Tracking started... Walk the perimeter now. Points: 0';
 
-                    // Start watching the position for continuous updates
+                    // Add start marker
+                    const startMarker = L.marker([initialLat, initialLon], { icon: startIcon }).addTo(map);
+                    markers.push(startMarker);
+
+                    // Start watching the position
                     watchId = navigator.geolocation.watchPosition(
                         (position) => {
                             const lat = position.coords.latitude;
                             const lon = position.coords.longitude;
-                            const newPoint = [lon, lat];
-                            console.log('New position:', lat, lon);
+                            const accuracy = position.coords.accuracy;
+                            console.log('New position:', lat, lon, 'Accuracy:', accuracy);
 
-                            // Add the new coordinate
+                            // Filter out low-accuracy points
+                            if (accuracy > 20) {
+                                console.log('Skipping point due to low accuracy:', accuracy);
+                                return;
+                            }
+
+                            const newPoint = [lon, lat];
                             coordinates.push(newPoint);
+
                             // Update the line on the map
                             const latLngs = coordinates.map(coord => [coord[1], coord[0]]);
                             if (pathLine) map.removeLayer(pathLine);
-                            pathLine = L.polyline(latLngs, { color: 'red' }).addTo(map);
+                            pathLine = L.polyline(latLngs, { color: '#ef4444', weight: 5, opacity: 0.8 }).addTo(map);
+
                             // Add a marker for the latest point
-                            const newMarker = L.marker([lat, lon]).addTo(map);
+                            const newMarker = L.marker([lat, lon], { icon: pointIcon }).addTo(map);
                             markers.push(newMarker);
 
                             // Center the map on the latest position
                             map.setView([lat, lon]);
+
+                            // Update point count
+                            resultDiv.innerHTML = `Tracking... Points: ${coordinates.length}`;
                         },
                         (error) => {
                             console.error('Geolocation error:', error);
-                            resultDiv.innerHTML = `Error: ${error.message}. Please ensure location services are enabled.`;
+                            resultDiv.innerHTML = `Error: ${error.message}. Ensure location services are enabled and you're in an open area.`;
+                            spinner.style.display = 'none';
                             stopTracking();
                         },
-                        { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
+                        { enableHighAccuracy: true, timeout: 5000, maximumAge: 1000 }
                     );
                 },
                 (error) => {
                     console.error('Initial geolocation error:', error);
-                    resultDiv.innerHTML = `Error: Could not get initial location: ${error.message}. Please allow location access and try again.`;
+                    resultDiv.innerHTML = `Error: Could not get initial location: ${error.message}. Please allow location access and try again in an open area.`;
+                    spinner.style.display = 'none';
                     stopTracking();
                 },
-                { enableHighAccuracy: true, timeout: 10000, maximumAge: 0 }
+                { enableHighAccuracy: true, timeout: 5000, maximumAge: 1000 }
             );
         }
 
@@ -111,20 +155,20 @@
             }
             startButton.disabled = false;
             stopButton.disabled = true;
+            spinner.style.display = 'none';
 
             if (coordinates.length < 3) {
                 resultDiv.innerHTML = "Not enough points to form a polygon. Please walk a larger area.";
                 return;
             }
 
-            // Close the polygon by adding the first coordinate at the end
+            // Close the polygon
             const finalCoordinates = [...coordinates, coordinates[0]];
             console.log('Final coordinates:', finalCoordinates);
 
-            // Validate and create a GeoJSON polygon
+            // Validate and calculate area
             try {
                 const polygon = turf.polygon([finalCoordinates]);
-                // Calculate the area in square meters and convert to other units
                 const areaInSqMeters = turf.area(polygon);
                 const areaInAcres = areaInSqMeters * 0.000247105;
                 const areaInHectares = areaInSqMeters * 0.0001;
@@ -132,16 +176,22 @@
 
                 // Display the results
                 resultDiv.innerHTML = `
-                    <h3>Calculated Area:</h3>
+                    <h3 class="text-lg font-semibold">Calculated Area:</h3>
                     <p><strong>Square Meters:</strong> ${areaInSqMeters.toFixed(2)}</p>
                     <p><strong>Acres:</strong> ${areaInAcres.toFixed(4)}</p>
                     <p><strong>Hectares:</strong> ${areaInHectares.toFixed(4)}</p>
                     <p><strong>Square Feet:</strong> ${areaInSqFeet.toFixed(2)}</p>
                 `;
 
-                // Draw the final closed polygon on the map
+                // Draw the final closed polygon
                 if (pathLine) map.removeLayer(pathLine);
-                L.polygon(finalCoordinates.map(coord => [coord[1], coord[0]]), { color: 'blue' }).addTo(map);
+                L.polygon(finalCoordinates.map(coord => [coord[1], coord[0]]), {
+                    color: '#3b82f6',
+                    fillColor: '#3b82f6',
+                    fillOpacity: 0.3,
+                    weight: 4,
+                    dashArray: '5, 10'
+                }).addTo(map);
             } catch (e) {
                 console.error('Turf.js error:', e);
                 resultDiv.innerHTML = 'Error calculating area: Invalid polygon. Please try again.';
@@ -152,7 +202,7 @@
         startButton.addEventListener('click', startTracking);
         stopButton.addEventListener('click', stopTracking);
 
-        // Invalidate map size on load to ensure proper rendering
+        // Invalidate map size on load
         setTimeout(() => map.invalidateSize(), 100);
     </script>
 </body>
