--- a/hello.html
+++ b/hello.html
@@ -7,21 +7,25 @@
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; background-color: #f9fafb; }
         #map { height: 600px; width: 100%; margin-top: 10px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        .controls { margin-bottom: 20px; display: flex; gap: 10px; }
+        .controls { margin-bottom: 20px; display: flex; gap: 10px; align-items: center; }
         #result { margin-top: 20px; padding: 15px; border: 1px solid #e5e7eb; border-radius: 8px; background-color: #ffffff; }
         .spinner { display: none; border: 4px solid #f3f3f3; border-top: 4px solid #3b82f6; border-radius: 50%; width: 24px; height: 24px; animation: spin 1s linear infinite; margin: 10px auto; }
         .status-dot { display: inline-block; width: 10px; height: 10px; border-radius: 50%; background-color: #10b981; animation: blink 1.5s infinite; margin-right: 8px; }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.3; } }
-        @media (max-width: 640px) { #map { height: 400px; } .controls { flex-direction: column; } }
+        @media (max-width: 640px) { #map { height: 400px; } .controls { flex-direction: column; align-items: flex-start; } }
     </style>
 </head>
 <body>
     <h1 class="text-2xl font-bold text-gray-800">GPS Land Area Calculator</h1>
-    <p class="text-gray-600 mb-4">Press "Start Measurement," walk the perimeter in an open area with clear sky, then press "Stop & Calculate." Ensure location permissions are enabled.</p>
+    <p class="text-gray-600 mb-4">Press "Start Measurement," walk a perimeter in an open area with clear sky, then press "Stop & Calculate." Ensure location permissions are enabled.</p>
     <div class="controls">
         <button id="startButton" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600 transition">Start Measurement</button>
         <button id="stopButton" class="bg-gray-500 text-white px-4 py-2 rounded-md hover:bg-gray-600 transition" disabled>Stop & Calculate</button>
+        <label class="flex items-center text-gray-600">
+            <input type="checkbox" id="centerMap" checked class="mr-2">
+            Center map on position
+        </label>
     </div>
     <div id="map"></div>
     <div id="spinner" class="spinner"></div>
@@ -60,15 +64,25 @@
         let pathLine = null;
         let markers = [];
         let lastPosition = null;
+        let lastUpdateTime = 0;
         const startButton = document.getElementById('startButton');
         const stopButton = document.getElementById('stopButton');
+        const centerMapCheckbox = document.getElementById('centerMap');
         const resultDiv = document.getElementById('result');
         const spinner = document.getElementById('spinner');
 
-        // Function to check if two points are too close (to avoid duplicates)
-        function arePointsTooClose(coord1, coord2) {
-            const threshold = 0.00001; // Roughly 1 meter in degrees
-            return Math.abs(coord1[0] - coord2[0]) < threshold && Math.abs(coord1[1] - coord2[1]) < threshold;
+        // Calculate distance between two points (in meters)
+        function getDistance(coord1, coord2) {
+            const toRad = (deg) => deg * Math.PI / 180;
+            const R = 6371000; // Earth's radius in meters
+            const lat1 = coord1[1], lon1 = coord1[0], lat2 = coord2[1], lon2 = coord2[0];
+            const dLat = toRad(lat2 - lat1);
+            const dLon = toRad(lon2 - lon1);
+            const a = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+                      Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) *
+                      Math.sin(dLon / 2) * Math.sin(dLon / 2);
+            const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+            return R * c;
         }
 
         // Function to start the location tracking
@@ -83,6 +97,7 @@
             spinner.style.display = 'block';
             coordinates = [];
             lastPosition = null;
+            lastUpdateTime = Date.now();
 
             // Clear previous markers and lines
             if (pathLine) map.removeLayer(pathLine);
@@ -99,9 +114,10 @@
                         const lat = position.coords.latitude;
                         const lon = position.coords.longitude;
                         const accuracy = position.coords.accuracy;
-                        console.log('New position:', { lat, lon, accuracy, timestamp: position.timestamp });
+                        const timestamp = position.timestamp;
+                        console.log('New position:', { lat, lon, accuracy, timestamp });
 
-                        // Reset retry count on successful position
+                        // Reset retry count
                         retryCount = 0;
 
                         // Filter out low-accuracy points
@@ -112,16 +128,25 @@
                         }
 
                         const newPoint = [lon, lat];
-                        // Skip duplicate or near-identical points
-                        if (lastPosition && arePointsTooClose(newPoint, lastPosition)) {
-                            console.log('Skipping near-duplicate point:', newPoint);
+                        const currentTime = Date.now();
+
+                        // Check distance from last point (min 5 meters)
+                        if (lastPosition && getDistance(newPoint, lastPosition) < 5) {
+                            console.log('Skipping point: too close to last position:', newPoint);
+                            return;
+                        }
+
+                        // Check if enough time has passed (throttle to 2 seconds)
+                        if (currentTime - lastUpdateTime < 2000) {
+                            console.log('Skipping point: too soon since last update');
                             return;
                         }
 
                         coordinates.push(newPoint);
                         lastPosition = newPoint;
+                        lastUpdateTime = currentTime;
 
-                        // Update the line on the map
+                        // Update the line and markers
                         const latLngs = coordinates.map(coord => [coord[1], coord[0]]);
                         if (pathLine) map.removeLayer(pathLine);
                         pathLine = L.polyline(latLngs, { color: '#ef4444', weight: 5, opacity: 0.8 }).addTo(map);
@@ -130,11 +155,20 @@
                         const newMarker = L.marker([lat, lon], { icon: pointIcon }).addTo(map);
                         markers.push(newMarker);
 
-                        // Center the map on the latest position
-                        map.setView([lat, lon]);
+                        // Center map if enabled
+                        if (centerMapCheckbox.checked) {
+                            map.flyTo([lat, lon], 19, { duration: 0.5 });
+                        }
 
                         // Update status
                         resultDiv.innerHTML = `<span class="status-dot"></span>Tracking Active... Points: ${coordinates.length}, Accuracy: ${accuracy.toFixed(1)}m`;
+
+                        // Warn if no updates for 10 seconds
+                        setTimeout(() => {
+                            if (Date.now() - lastUpdateTime > 10000) {
+                                resultDiv.innerHTML = `<span class="status-dot"></span>Tracking stalled. Move to an open area or check GPS signal. Points: ${coordinates.length}`;
+                            }
+                        }, 10000);
                     },
                     (error) => {
                         console.error('Geolocation error:', error);
@@ -148,7 +182,7 @@
                             stopTracking();
                         }
                     },
-                    { enableHighAccuracy: true, timeout: 3000, maximumAge: 2000 }
+                    { enableHighAccuracy: true, timeout: 5000, maximumAge: 3000 }
                 );
             }
 
@@ -160,7 +194,7 @@
                     const accuracy = initialPosition.coords.accuracy;
                     console.log('Initial position:', { lat: initialLat, lon: initialLon, accuracy });
 
-                    // Set the map view to the initial location
+                    // Set the map view
                     map.setView([initialLat, initialLon], 19);
                     map.invalidateSize();
                     spinner.style.display = 'none';
@@ -179,7 +213,7 @@
                     spinner.style.display = 'none';
                     stopTracking();
                 },
-                { enableHighAccuracy: true, timeout: 5000, maximumAge: 2000 }
+                { enableHighAccuracy: true, timeout: 5000, maximumAge: 3000 }
             );
         }
 
@@ -194,7 +228,7 @@
             spinner.style.display = 'none';
 
             if (coordinates.length < 3) {
-                resultDiv.innerHTML = `Not enough points to form a polygon (${coordinates.length} points). Walk a larger perimeter and ensure GPS signal is strong.`;
+                resultDiv.innerHTML = `Not enough points to form a polygon (${coordinates.length} points). Walk a larger perimeter (at least 10-20 meters) in an open area.`;
                 return;
             }
 
@@ -202,10 +236,11 @@
             const finalCoordinates = [...coordinates, coordinates[0]];
             console.log('Final coordinates:', finalCoordinates);
 
-            // Validate and calculate area
+            // Simplify polygon to avoid self-intersections
             try {
                 const polygon = turf.polygon([finalCoordinates]);
-                const areaInSqMeters = turf.area(polygon);
+                const simplified = turf.simplify(polygon, { tolerance: 0.00001, highQuality: true });
+                const areaInSqMeters = turf.area(simplified);
                 const areaInAcres = areaInSqMeters * 0.000247105;
                 const areaInHectares = areaInSqMeters * 0.0001;
                 const areaInSqFeet = areaInSqMeters * 10.7639;
@@ -221,16 +256,21 @@
 
                 // Draw the final closed polygon
                 if (pathLine) map.removeLayer(pathLine);
-                L.polygon(finalCoordinates.map(coord => [coord[1], coord[0]]), {
+                const latLngs = finalCoordinates.map(coord => [coord[1], coord[0]]);
+                L.polygon(latLngs, {
                     color: '#3b82f6',
                     fillColor: '#3b82f6',
                     fillOpacity: 0.3,
                     weight: 4,
                     dashArray: '5, 10'
                 }).addTo(map);
+
+                // Fit map to polygon bounds
+                const bounds = L.latLngBounds(latLngs);
+                map.fitBounds(bounds, { padding: [50, 50], maxZoom: 19 });
             } catch (e) {
                 console.error('Turf.js error:', e);
-                resultDiv.innerHTML = `Error calculating area: Invalid polygon (possible duplicate or overlapping points). Try walking a larger, simpler perimeter.`;
+                resultDiv.innerHTML = `Error calculating area: Invalid polygon (possible overlapping or complex path). Try walking a simpler, larger perimeter.`;
             }
         }
 
